whitespace fix

--- a/_white-space.sass
+++ b/_white-space.sass
@@ -27,7 +27,7 @@ $space-4: 4rem !default
   margin-top: -$space-1
   margin-bottom: -$space-1
 .mn1
-  margin: -$space-1 -$space-1
+  margin: -$space-1
 
 .pt2
   padding-top: $space-2
@@ -53,7 +53,7 @@ $space-4: 4rem !default
   margin-top: -$space-2
   margin-bottom: -$space-2
 .mn2
-  margin: -$space-2 -$space-2
+  margin: -$space-2
 
 .pt3
   padding-top: $space-3
@@ -79,7 +79,7 @@ $space-4: 4rem !default
   margin-top: -$space-3
   margin-bottom: -$space-3
 .mn3
-  margin: -$space-3 -$space-3
+  margin: -$space-3
 
 .pt4
   padding-top: $space-4
@@ -105,4 +105,4 @@ $space-4: 4rem !default
   margin-top: -$space-4
   margin-bottom: -$space-4
 .mn4
-  margin: -$space-4 -$space-4
+  margin: -$space-4
